Swagger added, all exceptions(ı hope) handled globally